--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <header>
 
             <h1>This is a headline</h1>
-
-            <h1>Changes in Feature Branch</h1>
-            <h1>Changes in Develop Branch</h1>
-
+            <h2>This a headline 2</h2>
+            <a href="#">This is a link</a>
         </header>
         <nav>
 
