deletes form and add a text

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
             <h1>This is a headline</h1>
             <h2>This a headline 2</h2>
             <a href="#">This is a link</a>
-            <form>
-                <input type="text">
-            </form>
+            <p>Here was the form</p>
         </header>
         <nav>
 
