--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <h2>This a headline 2</h2>
             <a href="#">This is a link</a>
             <p>Here was the form</p>
+            <p>New text</p>
         </header>
         <nav>
 
